# ascendc_uniprefill

./: CMakeLists.txt  PLAN.md  PROJECT_INFO.md  README.md  run.sh
no_sync_fixed_topk_compact/: CMakeLists.txt  README.md  run_validation.sh
no_sync_fixed_topk_compact/docs/: NO_SYNC_FIXED_TOPK_COMPACT.md  NO_SYNC_VALIDATION_PLAN.md  TILED_FIX_TEST_REPORT.md
no_sync_fixed_topk_compact/op_extension/: ops.h  register.cpp  uniprefill_fixed_topk_compact_torch.cpp
no_sync_fixed_topk_compact/op_kernel/: no_sync_tiling.h  uniprefill_fixed_topk_compact_kernel.asc  uniprefill_fixed_topk_compact_tiled_kernel.asc
no_sync_fixed_topk_compact/scripts/: validate_fixed_topk_compact_out.py
op_extension/: ops.h  register.cpp  topselection_torch.cpp
op_kernel/: topselection_expand_mask_kernel.asc  topselection_tiling.h  topselection_top_p_kernel.asc
prototypes/: topk_block_compact.py
scripts/: golden.py  test_top_k_selection.py  test_torch.py  top_k_selection.py
